Script/KubeK8S/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-3party.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: influxdb
  name: influxdb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: influxdb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: influxdb
    spec:
      containers:
      - image: influxdb
        name: influxdb
        ports:
        - containerPort: 8086
        resources: {}
      restartPolicy: Always
status: {}
