Script/KubeK8S/isignalrservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: isignalrservice
  name: isignalrservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: isignalrservice
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: isignalrservice
    spec:
      containers:
      - env:
        - name: CONSUL_ENABLED
          value: "false"
        - name: VAULT_ENABLED
          value: "false"
        image: mattcoder/fromapp-to-k8s:isignalrservice
        imagePullPolicy: Always
        name: isignalrservice
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
