Script/KubeK8S/productservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: productservice
  name: productservice
  namespace: default
spec:
  replicas: 1
  selector:
        matchLabels:
          io.kompose.service: productservice
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: productservice
    spec:
      containers:
      - env:
        - name: CONSUL_ENABLED
          value: "false"
        - name: VAULT_ENABLED
          value: "false"
        image:  mattcoder/fromapp-to-k8s:productservice
        imagePullPolicy: Always
        name: productservice
        ports:
        - containerPort: 80
        resources: {}
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "100m"
      restartPolicy: Always
status: {}
