Script/KubeK8S/isignalrservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Software\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: isignalrservice
  name: isignalrservice
  namespace: default
spec:
  ports:
  - port: 80
  selector:
    io.kompose.service: isignalrservice
  type: ClusterIP
