Script/KubeK8S/orderservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Software\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
    traefik.frontend.rule: 'AddPrefix: /order'
  creationTimestamp: null
  labels:
    io.kompose.service: orderservice
  name: orderservice
  namespace: default
spec:
  ports:
  - port: 80
  selector:
    io.kompose.service: orderservice
  type: ClusterIP
