Script/KubeK8S/productservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Software\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: productservice
  name: productservice
  namespace: default
spec:
  ports:
  - port: 80
  selector:
    io.kompose.service: productservice
  type: ClusterIP
